fixed alignment for mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -61,6 +61,7 @@ body {
 .title {
   font-size: 2.5rem;
   font-weight: 500;
+  text-align: center;
 }
 
 .subtitle {
@@ -69,6 +70,7 @@ body {
   font-size: 1.25rem;
   line-height: 1.4  ;
   font-weight: normal;
+  text-align: center;
 }
 
 .graphic img, .imgDemo {
@@ -76,20 +78,36 @@ body {
 }
 
 // form
+#formWaitlistMain {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.inputText, .buttonSubmit {
+  width: 75%;
+  max-width: 200px;
+}
+
 .inputText {
   border: none;
   padding: 12px 16px;
   background-color: $inputBg;
   border-radius: 8px;
+  width: 75%;
+  max-width: 200px;
 }
 
 .buttonSubmit {
   background-color: $colorPrimary;
   padding: 12px 16px;
+  margin-top: 0.5rem;
   text-align: center;
   border-radius: 8px;
   font-weight: 400;
   color: white;
+  width: 75%;
+  max-width: 200px;  
 }
 
 /* Sections ================================== */
